Enhance README with project details and instructions
Added detailed project overview, structure, and usage instructions.